// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test components Test Calculator component 1`] = `
Array [
  <div
    className="header"
  >
    <h1>
      Math Magicians
    </h1>
    <ul>
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <li>
        <a
          href="/calculator"
          onClick={[Function]}
        >
          Calculator
        </a>
      </li>
      <li>
        <a
          href="/quotes"
          onClick={[Function]}
        >
          Quotes
        </a>
      </li>
    </ul>
  </div>,
  <div
    className="container"
  >
    <div
      className="calculator"
    >
      <input
        className="display"
        type="text"
        value=""
      />
      <div
        className="row"
      >
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          className="operator"
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
      </div>
      <div
        className="row"
      >
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          className="operator"
          onClick={[Function]}
          type="button"
        >
          x
        </button>
      </div>
      <div
        className="row"
      >
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          className="operator"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
      </div>
      <div
        className="row"
      >
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="operator"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
      <div
        className="row"
      >
        <button
          className="zero"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <button
          className="normal"
          onClick={[Function]}
          type="button"
        >
          .
        </button>
        <button
          className="operator"
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Test components Test Header component 1`] = `
Array [
  <div
    className="header"
  >
    <h1>
      Math Magicians
    </h1>
    <ul>
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <li>
        <a
          href="/calculator"
          onClick={[Function]}
        >
          Calculator
        </a>
      </li>
      <li>
        <a
          href="/quotes"
          onClick={[Function]}
        >
          Quotes
        </a>
      </li>
    </ul>
  </div>,
  <div
    className="container"
  >
    <h2
      className="h2"
    >
      Welcome to our page!
    </h2>
    <p>
      Smart Math Magicians brings a touch of enchantment to your mathematical journey. Equipped with the power of React, this single-page application seamlessly melds the art of computation with the wonder of technology. With Smart Math Magicians, complex calculations become a breeze.
    </p>
  </div>,
]
`;

exports[`Test components Test Home component 1`] = `
<div
  className="header"
>
  <h1>
    Math Magicians
  </h1>
  <ul>
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        href="/calculator"
        onClick={[Function]}
      >
        Calculator
      </a>
    </li>
    <li>
      <a
        href="/quotes"
        onClick={[Function]}
      >
        Quotes
      </a>
    </li>
  </ul>
</div>
`;

exports[`Test components Test Quote component 1`] = `
Array [
  <div
    className="header"
  >
    <h1>
      Math Magicians
    </h1>
    <ul>
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <li>
        <a
          href="/calculator"
          onClick={[Function]}
        >
          Calculator
        </a>
      </li>
      <li>
        <a
          href="/quotes"
          onClick={[Function]}
        >
          Quotes
        </a>
      </li>
    </ul>
  </div>,
  <div
    className="container"
  >
    <div
      className="quote"
    >
      <blockquote>
        <p>
           undefined 
        </p>
        <p>
          <strong>
            —
             undefined
          </strong>
        </p>
      </blockquote>
    </div>
  </div>,
]
`;
